오픈 api 호출 테스트 성공

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,4 +9,5 @@ a:hover {text-decoration:none; color:#000;}
 
 .menu2 {font-size:small;}
 
-.search-category {font-size:x-small;}
+.search-box {width:600px;}
+.search-category {font-size:small;}
