외국도서 카테고리버튼 추가, 검색기능 추가, 로그인 화면 마크업, 회원가입 페이지 마크업(미완)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -20,3 +20,12 @@ a:hover {text-decoration:none; color:#000;}
 
 .box-gap {gap:15px 89px;}
 .category-menu {max-height:500px;}
+
+.margin-box {margin-top:130px;}
+.login-box {width:500px; background-color:#999;}
+.login-select-box {width:130px; height:35px; background-color:#999; cursor:pointer;}
+#loginBtn {width:90px; height:90px; margin-top:28px;}
+#nMLoginBtn {width:90px; height:90px; margin-top:28px;}
+
+.sign-up-box {min-width:900px;}
+.sign-up-title-box {font-size:25px;}
