회원가입 마크업 및 기능구현 완료, 로그인 기능구현(미완)

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,3 +29,4 @@ a:hover {text-decoration:none; color:#000;}
 
 .sign-up-box {min-width:900px;}
 .sign-up-title-box {font-size:25px;}
+#emailCheckBtn {margin-left:68px;}
